pull neutral stance

--- a/contrib/Config/StancesNG.ini
+++ b/contrib/Config/StancesNG.ini
@@ -13,6 +13,9 @@ iModifierKeyMidStance = 0
 iLowStanceKey = 45
 iModifierKeyLowStance = 29
 
+iNeutralStanceKey = 45
+iModifierKeyNeutralStance = 56
+
 ;wether to change stances with individual keys or use the MID STANCE KEY to cycle through them.
 bUseCycling = true
 
@@ -25,4 +28,5 @@ sModFileName = StancesNG.esp
 HighStanceSpellFormID = 0x800
 MidStanceSpellFormID = 0x801
 LowStanceSpellFormID = 0x802
+NeutralStanceSpellFormID = 0x803
 
